# Bopper

./: .gitignore  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GIF/: GifAnimator.cpp  GifAnimator.h  GifLoader.cpp  GifLoader.h
Source/UI/: BeatGIFLookAndFeel.cpp  BeatGIFLookAndFeel.h  BopperLookAndFeel.cpp  BopperLookAndFeel.h  GifDisplayComponent.cpp  GifDisplayComponent.h  GifSelectorComponent.cpp  GifSelectorComponent.h
Source/Utils/: BpmSync.cpp  BpmSync.h
docs/: app.css  app.html  app.js  daw.html  index.html  style.css
website/: index.html  style.css
